low resources # Git commit message

--- a/backend/cloudbuild.yaml
+++ b/backend/cloudbuild.yaml
@@ -20,11 +20,13 @@ steps:
       - '--region=europe-west1'
       - '--platform=managed'
       - '--allow-unauthenticated'
-      - '--memory=512Mi'
+      - '--memory=256Mi'
       - '--cpu=1'
       - '--min-instances=0'
-      - '--max-instances=10'
-      - '--timeout=300'
+      - '--max-instances=3'
+      - '--timeout=60'
+      - '--concurrency=80'
+      - '--cpu-throttling'
       - '--port=8080'
       - '--add-cloudsql-instances=ceperic-68bcd:europe-west1:ceperic-db'
       - '--set-env-vars=DB_HOST=/cloudsql/ceperic-68bcd:europe-west1:ceperic-db,DB_PORT=5432,DB_USER=postgres,DB_NAME=ceperic_db,ENVIRONMENT=production'
