fix: corregir path de build en firebase.json

--- a/ceperic-app/firebase.json
+++ b/ceperic-app/firebase.json
@@ -1,6 +1,6 @@
 {
   "hosting": {
-    "public": "dist/frontend/browser",
+    "public": "dist/ceperic-app/browser",
     "ignore": [
       "firebase.json",
       "**/.*",
